@@ -137,6 +137,13 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QCheckBox" name="hide_video_window_on_audio_check" >
+              <property name="text" >
+               <string>&amp;Hide video window when playing audio files</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
@@ -947,6 +954,7 @@
   <tabstop>tabWidget</tabstop>
   <tabstop>mainwindow_resize_combo</tabstop>
   <tabstop>save_size_check</tabstop>
+  <tabstop>hide_video_window_on_audio_check</tabstop>
   <tabstop>recents_max_items_spin</tabstop>
   <tabstop>language_combo</tabstop>
   <tabstop>iconset_combo</tabstop>
@@ -955,6 +963,8 @@
   <tabstop>default_font_edit</tabstop>
   <tabstop>changeFontButton</tabstop>
   <tabstop>timeslider_behaviour_combo</tabstop>
+  <tabstop>absolute_seeking_button</tabstop>
+  <tabstop>relative_seeking_button</tabstop>
   <tabstop>single_instance_check</tabstop>
   <tabstop>automatic_port_button</tabstop>
   <tabstop>manual_port_button</tabstop>
